--- a/index.html
+++ b/index.html
@@ -12,6 +12,71 @@
   <title>Document</title>
 </head>
 <body>
+  <header>
+    <h1>Roll Dice</h1>
+    <div class="new_area">
+      <button id="startGame" class="btn btn-outline-primary " data-bs-toggle="modal" href="#exampleModalToggle" role="button">New Game</button>
+      <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h2 class="modal-title fs-5" id="exampleModalToggleLabel">Choose your name</h2>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="inputGroup-sizing-default">Player 1</span>
+                <input type="text" class="form-control" id="name01" aria-label="Username" placeholder="Username" aria-describedby="inputGroup-sizing-default">
+              </div>
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="inputGroup-sizing-default">Player 2</span>
+                <input type="text" class="form-control" id="name02" aria-label="Username" placeholder="Username" aria-describedby="inputGroup-sizing-default">
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button class="btn btn-outline-primary" id="toss" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">heads or tails
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content id="heads_tails_modal">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="tossTitle">Player 1 Choose heads or tails</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">                </button>
+            </div>
+            <div class="modal-body">
+              <div class = "btn_choice">
+                <div class= "heads_btn d-grid gap-2 col-3">
+                  <button type="button" id="heads_btn" class="btn btn-outline-primary btn-sm">Heads
+                  </button>
+                </div>
+                <div class="tails_btn d-grid gap-2 col-3">
+                  <button type="button" id="tails_btn" class="btn btn-outline-primary btn-sm">Tails
+                  </button>
+                </div>
+              </div>
+              <div class="coin" id="coin">
+                <div class="heads">
+                  <img src="img/heads_coin.svg">
+                </div>
+                <div class="tails">
+                  <img src ="img/tails_coin.svg">
+                </div>            
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="rules_btn">
+      <button type="button" class="btn rules_btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        Rules
+      </button>
+    </div>
+  </header>
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
