--- a/index.html
+++ b/index.html
@@ -75,7 +75,44 @@
       <button type="button" class="btn rules_btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
         Rules
       </button>
-</div>
+      <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">Game's Rules</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p>
+                Le jeu comprend 2 joueurs sur un seul et même écran.
+              </p>
+              <p>
+                Chaque joueur possède un score temporaire (CURRENT) et un score global (GLOBAL)
+              </p>
+              <p>
+                À chaque tour, le joueur a son CURRENT initialisé à 0 et peut lancer un dé autant de fois qu'il le souhaite. Le résultat d’un lancer est ajouté au CURRENT.
+              </p>
+              <p>
+                Lors de son tour, le joueur peut décider à tout moment de:
+              </p> 
+              <p>
+                -Cliquer sur l’option “Hold”, qui permet d’envoyer les points du CURRENT vers le GLOBAL. Ce sera alors le tour de l’autre joueur.
+              </p>
+              <p>
+                -Lancer le dé. S’il obtient un 1, son score CURRENT est perdu et c’est la fin de son tour.
+              </p>
+              <p>
+                Le premier joueur qui atteint les 100 points sur global gagne le jeu.
+              </p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn-outline-primary" data-bs-dismiss="modal">Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
