--- a/index.html
+++ b/index.html
@@ -114,6 +114,27 @@
       </div>
     </div>
   </header>
+  <main>
+    <div class="game-area">
+      <div class="player_area area1" id="player1_area">
+        <div class="player1">
+          <div class="player_score">
+            <div class = pseudo_player>
+              <span id="player1Name" class="playerName">PLAYER 1</span>
+            </div>
+            <span id="global01" class="global">0</span>
+          </div>
+          <div class="player_bottom">
+            <span class="current_title">CURRENT</span>
+            <span id="current01" class="current">0</span>      
+          </div> 
+        </div> 
+        <div class="current_player logo01">
+           <i class="fa-solid fa-circle current_player " id="current_player1"></i> 
+        </div>
+      </div>
+    </div>
+  </main>
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
