ADD: creating player 2 area

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Document</title>
 </head>
 <body>
-  
+
   <header>
     <h1>Roll Dice</h1>
     <div class="new_area">
@@ -118,6 +118,7 @@
 
   <main>
     <div class="game-area">
+
       <div class="player_area area1" id="player1_area">
         <div class="player1">
           <div class="player_score">
@@ -135,6 +136,7 @@
            <i class="fa-solid fa-circle current_player " id="current_player1"></i> 
         </div>
       </div>
+
       <div class="dice_area">
         <div class="dice">
           <img src="/img/Dice1.svg" class="dice_img" id="dice_img" alt="image montrant la face du dé">
@@ -150,6 +152,25 @@
           </div> 
         </div>
       </div>
+
+      <div class="player_area area2" id="player2_area">
+        <div class="player2">
+          <div class="player_score">
+            <div class = pseudo_player>
+              <span id="player2Name" class="playerName">PLAYER 2</span>   
+            </div>
+            <span id="global02" class="global">0</span>
+          </div>
+          <div class="player_bottom">
+            <span class="current_title">CURRENT</span>
+            <span id="current02" class="current">0</span>  
+          </div>          
+        </div>
+        <div class="current_player02">
+           <i class="fa-solid fa-circle current_player " id="current_player2"></i> 
+        </div>
+      </div>  
+
     </div>
    
   </main>
